fix: mentoring room list read API