@@ -7,7 +7,7 @@ import org.springframework.cache.support.SimpleCacheManager;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableCaching
@@ -16,9 +16,8 @@ public class CacheConfig {
   @Bean
   public CacheManager cacheManager() {
     SimpleCacheManager cacheManager = new SimpleCacheManager();
-    cacheManager.setCaches(Arrays.asList(
-            new ConcurrentMapCache("firstMentoringRoomList"),
-            new ConcurrentMapCache("spareMentoringRoomList")
+    cacheManager.setCaches(List.of(
+            new ConcurrentMapCache("mentoringRoomList")
     ));
     return cacheManager;
   }
